Windows.hを細分化しようとした
strlenはまだ入ってない